--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Internet Connection Status Checker</h1>
+        <a href="index1.html">Contact Us</a>
         <div class="status">
            <p><strong>Connection Status:</strong><span id="statusText">Checking...</span></p> 
            <p><strong>IP Address:</strong><span id="ipAddressText">-</span></p>
