--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Clock Application</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="clock/css/style.css">
 </head>
 <body>
 
@@ -35,6 +35,6 @@
             
         </div>
        </div> 
-    <script src="script.js"></script>
+    <script src="clock/js/script.js"></script>
 </body>
 </html>
