--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Internet Connection Status Checker</h1>
-        
+        <p><a href="index1.html">Clock</a></p>
         <div class="status">
            <p><strong>Connection Status:</strong><span id="statusText">Checking...</span></p> 
            <p><strong>IP Address:</strong><span id="ipAddressText">-</span></p>
