--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Internet Connection Status Checker
-        <p><a href="index1.html">Clock</a></p></h1>
+        <h1>Internet Connection Status Checker <a href="index1.html"> Clock</a>
+        </h1>
         <div class="status">
            <p><strong>Connection Status:</strong><span id="statusText">Checking...</span></p> 
            <p><strong>IP Address:</strong><span id="ipAddressText">-</span></p>
