--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Internet Connection Status Checker <a href="index1.html"> Clock</a>
+        <h1>Internet Connection Status <a href="index1.html"> Clock</a>
         </h1>
         <div class="status">
            <p><strong>Connection Status:</strong><span id="statusText">Checking...</span></p> 
