--- a/carousel/caro.html
+++ b/carousel/caro.html
@@ -38,6 +38,9 @@
 		flex-wrap: wrap; /* Allows items to wrap as needed */
 		/* Add some height to the section if you want to see the vertical centering effect */
 		min-height: 500px; /* Adjust based on your needs */
+		background-image: url('photo/bg1.jpg');
+		background-size: cover; /* Cover the entire container */
+		background-position: center; /* Center the background image */
 		
     }
 	
