--- a/expense_tracker/expense.html
+++ b/expense_tracker/expense.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet"
 		type="text/css"
 		href="style.css" /> 
+		
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
 
 	<style>
 		.expense-table table {
@@ -61,8 +63,8 @@
 		</form> 
 		
 		<div class="expense-table"> 
-			<table> 
-				<thead> 
+			<table id="expense-table"> 
+				<thead > 
 					<tr> 
 						<th style="width:20%;">Expense Name</th>
 						<th style="width:50%;text-align:left;">Narration</th>
@@ -87,8 +89,9 @@
 			
 		
 	</div>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>	
+	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+
 	<script src="script.js"></script>
 	
 </body> 
