--- a/expense_tracker/expense.html
+++ b/expense_tracker/expense.html
@@ -80,9 +80,6 @@
 					<strong>Total:</strong> 
 					Rs.<span id="total-amount">0</span>				
 				
-					<button style="float:right;" id="export-button"> 
-							Export Expense 
-					</button>
 
 				</div>
 				
@@ -91,6 +88,10 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>	
 	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/dataTables.buttons.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.html5.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.print.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.colVis.min.js"></script>
 
 	<script src="script.js"></script>
 	
