--- a/expense_tracker/expense.html
+++ b/expense_tracker/expense.html
@@ -70,7 +70,8 @@
 						<th style="width:50%;text-align:left;">Narration</th>
 						<th style="width:20%;text-align:right;">Amount (Rs)</th>
 						<th style="width:20%;text-align:center;">Date</th>						
-						<th >Action</th> 
+						<th >Action1</th>
+						<th >Action2</th>						
 					</tr> 
 				</thead> 
 				<tbody id="expense-list"></tbody> 
@@ -91,7 +92,7 @@
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/dataTables.buttons.min.js"></script>
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.html5.min.js"></script>
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.print.min.js"></script>
-	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.colVis.min.js"></script>
+	<script type="text/javascript" src=" https://cdn.datatables.net/buttons/2.0.1/js/buttons.colVis.min.js"></script>
 
 	<script src="script.js"></script>
 	
