--- a/expense_tracker/expense.html
+++ b/expense_tracker/expense.html
@@ -9,9 +9,10 @@
 		href="style.css" /> 
 		
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<style>
-		.expense-table table {
+	
+	.expense-table table {
 			width: 100%;
 			border-collapse: collapse;
 		}
@@ -40,7 +41,6 @@
 		}
 	
 	</style>
-
 </head> 
 
 <body> 
@@ -66,12 +66,12 @@
 			<table id="expense-table"> 
 				<thead > 
 					<tr> 
-						<th style="width:20%;">Expense Name</th>
-						<th style="width:50%;text-align:left;">Narration</th>
-						<th style="width:20%;text-align:right;">Amount (Rs)</th>
-						<th style="width:20%;text-align:center;">Date</th>						
-						<th >Action1</th>
-						<th >Action2</th>						
+						<th style="width:25%;">Expense Name</th>
+						<th style="width:53%;text-align:left;">Narration</th>
+						<th style="width:10%;text-align:right;">Amount (Rs)</th>
+						<th style="width:10%;text-align:center;">Date</th>						
+						<th >Actions</th>
+												
 					</tr> 
 				</thead> 
 				<tbody id="expense-list"></tbody> 
@@ -93,6 +93,7 @@
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.html5.min.js"></script>
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.print.min.js"></script>
 	<script type="text/javascript" src=" https://cdn.datatables.net/buttons/2.0.1/js/buttons.colVis.min.js"></script>
+	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 	<script src="script.js"></script>
 	
