--- a/expense_tracker/expense.html
+++ b/expense_tracker/expense.html
@@ -52,7 +52,7 @@
 			
 			<textarea  id="expense-comment" class="form-control" style="width: 35%; padding-top: calc(0.875em - .5px); padding-bottom: calc(0.375em - 1px);" placeholder="Comment"></textarea>
 
-			<input type="number" id="expense-amount" class="form-control" style="width: 20%;" placeholder="Amount" required /> 
+			<input type="number" id="expense-amount" class="form-control" style="width: 20%;" placeholder="Amount" /> 
 
 			<input type="date" id="expense-date" class="form-control" style="width: 20%;" required />
 			
@@ -94,7 +94,9 @@
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.print.min.js"></script>
 	<script type="text/javascript" src=" https://cdn.datatables.net/buttons/2.0.1/js/buttons.colVis.min.js"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
+	<script>
+		document.getElementById("expense-amount").value = "0";
+	</script>
 	<script src="script.js"></script>
 	
 </body> 
