--- a/Rct_Pmt_Register/rctpay.html
+++ b/Rct_Pmt_Register/rctpay.html
@@ -39,13 +39,16 @@
 			margin-left:425px;
 			float:left;
 		}
-	
+		.footer{
+			min-height: 10px;
+			text-align: center;
+		}
 	</style>
 </head> 
 
 <body> 
 	<div class="container"> 
-		<h1>Statements of  Receipt and Payment</h1> 
+		<h1>Easy Peasy Household Finance Management</h1> 
 		<form id="expense-form"> 
 			<div style="margin-top:5px;" class="form-check form-check-inline">
 				<input class="form-check-input" type="radio" name="expense-type" id="expense-rct" value="Rct" checked required>
@@ -56,9 +59,9 @@
 				<label class="form-check-label" for="expense-exp">Exp</label>
 			</div>
 			
-			<input type="text" id="expense-name"  class="form-control" style="width: 25%;" placeholder="Name" required /> 
+			<input type="text" id="expense-name"  class="form-control" style="width: 20%;" placeholder="Name" required /> 
 			
-			<textarea  id="expense-comment" class="form-control" style="width: 35%; padding-top: calc(0.875em - .5px); padding-bottom: calc(0.375em - 1px);" placeholder="Comment"></textarea>
+			<textarea  id="expense-comment" class="form-control" style="width: 30%; padding-top: calc(0.875em - .5px); padding-bottom: calc(0.375em - 1px);" placeholder="Comment"></textarea>
 
 			<input type="number" id="expense-amount"  class="form-control" style="width: 20%;" placeholder="Amount" /> 
 
@@ -97,8 +100,15 @@
 				</div>
 				
 			
+	<!-- Footer -->
+
+	<div class="d-flex flex-row align-items-center footer bg-white shadow-lg mt-4">
+		<p class="m-auto">&copy;&nbspSunil Chakraborty | 2024</p>
+	</div>
+	<!-- End Footer -->
 		
 	</div>
+	
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>	
 	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.1/js/dataTables.buttons.min.js"></script>
